# Text_Summarizer_fine_tuning

./: README.md  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: 1_data_ingestion.ipynb  2_data_transformation.ipynb  3_model_trainer.ipynb  4_model_evaluation.ipynb  research_notebook.ipynb  text_summarizer.ipynb
src/textSummarizer/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/entity/: __init__.py
src/textSummarizer/logging/: __init__.py
src/textSummarizer/pipeline/: prediction_pipeline.py  stage_1_data_ingestion_pipeline.py  stage_2_data_transformation_pipeline.py  stage_3_model_trainer_pipeline.py  stage_4_model_evaluation_pipeline.py
src/textSummarizer/utils/: common.py
