[project]
name = "text-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ensure>=1.0.4",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "py7zr>=1.1.2",
    "python-box>=7.3.2",
    "pyyaml>=6.0.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "tqdm>=4.67.1",
    "transformers[sentencepiece]>=4.57.6",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
